# quick-symbolic-regression

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  Doxyfile  README.md  benchmark.py  benchmark1d.py  benchmark_dataset_size.py  compile  compile.sh  main-inter.cc  main-intra.cc  main.cc  pyproject.toml  quicksr.py  requirements.txt  setup.py  util.hpp
benchmark/: benchmark1d.py  benchmark2d.py  benchmark_dataset_size.py  benchmark_pagie_polynomial.py  benchmark_population_size.py  benchmark_trigonometric.py  benchmark_year_prediction.py
benchmark/comparison/: benchmark_evogp.py  benchmark_quicksr.py  benchmark_runner.py  benchmark_utils.py
benchmark/dataset/: YearPredictionMSD.bib  YearPredictionMSD.sh
compiler/: bytecode.cc  bytecode.hpp  compiler.cc  compiler.hpp  ir.cc  ir.hpp  program.cc  programpopulation.cc  programpopulation.hpp
dataset/: dataset.cc  dataset.hpp
expressions/: binary.cc  binary.hpp  expression.cc  expression.hpp  unary.hpp
genetic/: crossover.cc  crossover.hpp  expression_comparator.cc  expression_comparator.hpp  expression_generator.cc  expression_generator.hpp  expression_generator_full.cc  expression_generator_full.hpp  expression_picker.cc  expression_picker.hpp  expression_reorganizer.hpp  genetic_programming.cc  genetic_programming.hpp  genetic_programming_islands.cc  genetic_programming_islands.hpp  island.cc  island.hpp  learning_history.cc  learning_history.hpp  mutation.cc  mutation.hpp
genetic/common/: config.cc  config.hpp  expression_generator.cc  expression_generator.hpp  expression_generator_full.cc  expression_generator_full.hpp  expression_picker.cc  expression_picker.hpp  expression_reorganizer.cc  expression_reorganizer.hpp  function_set.hpp  toolbox.cc  toolbox.hpp
genetic/crossover/: base.cc  base.hpp  default.cc  default.hpp
genetic/initialization/: base.cc  base.hpp  default.cc  default.hpp  full_initialization.cc  full_initialization.hpp  grow_initialization.cc  grow_initialization.hpp  ramped_half_and_half_initialization.cc  ramped_half_and_half_initialization.hpp
genetic/initialization/initializer/: base.cc  base.hpp  default.cc  default.hpp  full_initializer.cc  full_initializer.hpp  grow_initializer.cc  grow_initializer.hpp  ramped_half_and_half_initializer.cc  ramped_half_and_half_initializer.hpp
genetic/initializer/: base.cc  base.hpp  default.cc  default.hpp
genetic/mutation/: base.cc  base.hpp  default.cc  default.hpp  distribution_mutation.cc  distribution_mutation.hpp  hoist_mutation.cc  hoist_mutation.hpp  point_mutation.cc  point_mutation.hpp  subtree_mutation.cc  subtree_mutation.hpp
genetic/mutation/mutator/: base.cc  base.hpp  default.cc  default.hpp  distribution_mutator.cc  distribution_mutator.hpp  hoist_mutator.cc  hoist_mutator.hpp  point_mutator.cc  point_mutator.hpp  subtree_mutator.cc  subtree_mutator.hpp
genetic/recombination/: base.cc  base.hpp  default.cc  default.hpp
genetic/recombination/recombiner/: base.cc  base.hpp  default.cc  default.hpp
genetic/recombiner/: base.cc  base.hpp  default.cc  default.hpp
genetic/selection/: base.cc  base.hpp  fitness_proportional_selection.cc  fitness_proportional_selection.hpp  rank_selection.cc  rank_selection.hpp
genetic/selection/selector/: base.cc  base.hpp  fitness_proportional_selector.cc  fitness_proportional_selector.hpp  rank_selector.cc  rank_selector.hpp
include/quicksr/compiler/: compiler.hpp  ir.hpp  optimizer.hpp
include/quicksr/dataset/: dataset.hpp
include/quicksr/expressions/: binary.hpp  expression.hpp  unary.hpp
include/quicksr/genetic/: genetic_programming.hpp  genetic_programming_islands.hpp  learning_history.hpp
include/quicksr/runners/: base.hpp  gpu.hpp  runner_generator_base.hpp
include/quicksr/util/: half.hpp  hip.hpp  macro.hpp  precision.hpp
include/quicksr/vm/: vm_control.hpp  vm_debug.hpp  vm_functions.hpp  vm_gradients.hpp  vm_propagation.hpp  vm_types.hpp
inter-individual/: runner.cc  runner.hpp
inter-individual/dataset/: dataset.cc  dataset.hpp
inter-individual/program/: program.cc  program.hpp
inter-individual/vm/: vm.cc  vm.hip  vm.hpp
intra-individual/: runner.cc  runner.hpp
intra-individual/compiler/: programpopulation.cc  programpopulation.hpp
intra-individual/dataset/: dataset.cc  dataset.hpp
intra-individual/program/: program.cc  program.hpp
intra-individual/vm/: vm.cc  vm.hip  vm.hpp  vm_control.hpp  vm_debug.hpp  vm_propagation.hpp  vm_types.hpp
python/: bindings.cc
python/quicksr/: __init__.py  quicksr.py
runners/: base.cc  base.hpp  gpu.cc  gpu.hpp  runner_generator_base.cc  runner_generator_base.hpp
runners/cpu/: runner.cc  runner.hpp  runner_generator.cc  runner_generator.hpp
runners/hybrid/: runner.cc  runner.hip  runner.hpp  runner_generator.cc  runner_generator.hpp
runners/inter-individual/: runner.cc  runner.hip  runner.hpp  runner_generator.cc  runner_generator.hpp
runners/inter-individual/program/: program.cc  program.hpp
runners/inter-individual/vm/: vm.cc  vm.hpp
runners/intra-individual/: runner.cc  runner.hip  runner.hpp  runner_generator.cc  runner_generator.hpp
runners/intra-individual/program/: program.cc  program.hpp
runners/intra-individual/vm/: vm.cc  vm.hpp
src/compiler/: compiler.cc  ir.cc  optimizer.cc
src/dataset/: dataset.cc
src/expressions/: binary.cc  expression.cc
src/genetic/: genetic_programming.cc  genetic_programming_islands.cc  learning_history.cc
src/genetic/common/: config.cc  expression_generator.cc  expression_picker.cc  (+3 more)
src/python/: bindings.cc
src/runners/: base.cc  gpu.cc  runner_generator_base.cc
src/util/: rng.cc
tests/: testcpu.cc  testcrossover.cc  testdata.cc  testdata.hpp  testexprgen.cc  testexprpick.cc  testhybrid.cc  testinter.cc  testintra.cc  testisland.cc  testmutation.cc
tests/common/: testdata.cc  testdata.hpp
util/: hip.hpp  macro.hpp  rng.cc  rng.hpp
util/arrays/: array1d.hpp  array2d.hpp  memory.cc  memory.hpp
vm/: vm.hip  vm.hpp  vm_control.hpp  vm_debug.hpp  vm_functions.hpp  vm_gradients.hpp  vm_helper.hip  vm_helper.hpp  vm_propagation.hpp  vm_types.hpp
(+88 files in other folders)
